Grammar is hard

--- a/General.xaml
+++ b/General.xaml
@@ -2,7 +2,7 @@
 /*************************************************************************
 * Because it apparently takes a multi-billion dollar company over 2 years for
 * anyone in management to get an overworked dev to get around to implementing
-* an theming menu option for style changes they literally have sitting around
+* a theming menu option for style changes they literally have sitting around
 * in the root app directory... 
 * 🙈🙉🙊
 * 
